# homm3-asset-tool

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/lib/: alignment.h  def_types.h  file_types.h  palette.h
src/parser/: BinaryDataView.cpp  BinaryDataView.h  BinaryReader.cpp  BinaryReader.h  DefDecoder.cpp  DefDecoder.h  FileFormats.h  LodDecoder.cpp  LodDecoder.h  PcxDecoder.cpp  PcxDecoder.h  SpriteWriter.cpp  SpriteWriter.h  def_parser.cpp  def_parser.h  file_types.h  lod_parser.cpp  lod_parser.h  parse-def.cpp  parse-def.h  parse-lod.cpp  parse-lod.h
